Fix missing annotations when using Microsoft.NETCore.App.Ref 3.1.0

--- a/TunnelVisionLabs.ReferenceAssemblyAnnotator/TunnelVisionLabs.ReferenceAssemblyAnnotator.props
+++ b/TunnelVisionLabs.ReferenceAssemblyAnnotator/TunnelVisionLabs.ReferenceAssemblyAnnotator.props
@@ -9,6 +9,7 @@
 
   <PropertyGroup>
     <AnnotateReferenceAssembliesDependsOn>
+      ResolveAnnotatedReferenceAssemblies;
       ResolveAvailableReferenceAssemblies;
       ResolveOutputReferenceAssemblies
     </AnnotateReferenceAssembliesDependsOn>
