--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -31,7 +31,7 @@
 
   <!-- Use the 16.4 compiler -->
   <ItemGroup>
-    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="3.4.0-beta2-final" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="3.4.0" PrivateAssets="all" />
   </ItemGroup>
 
   <!-- Enable nullable reference types -->
