--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,8 @@ test_script:
 - git clean -dxf tests
 - msbuild /restore tests/MultiTFM /warnaserror /nr:false /v:m
 - git clean -dxf tests
+- msbuild /restore tests/MultiTFMPackageDownload /warnaserror /nr:false /v:m
+- git clean -dxf tests
 - msbuild /restore tests/RefVersion3.1.0 /warnaserror /nr:false /v:m
 - git clean -dxf tests
 - msbuild /restore tests/SingleTFM /p:TestFramework=net35 /warnaserror /nr:false /v:m
@@ -38,9 +40,33 @@ test_script:
 - msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp3.0 /warnaserror /nr:false /v:m
 - git clean -dxf tests
 - msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp3.1 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=net35 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=net48 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=netstandard1.6 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=netstandard2.0 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=netstandard2.1 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=netcoreapp1.0 /p:DisableImplicitNuGetFallbackFolder=true /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=netcoreapp1.1 /p:DisableImplicitNuGetFallbackFolder=true /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=netcoreapp2.0 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=netcoreapp2.1 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=netcoreapp3.0 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/SingleTFMPackageDownload /p:TestFramework=netcoreapp3.1 /warnaserror /nr:false /v:m
 
 - git clean -dxf tests
 - dotnet msbuild -restore tests/MultiTFM -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/MultiTFMPackageDownload -warnaserror -nr:false -v:m
 - git clean -dxf tests
 - dotnet msbuild -restore tests/RefVersion3.1.0 -warnaserror -nr:false -v:m
 - git clean -dxf tests
@@ -65,5 +91,27 @@ test_script:
 - dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp3.0 -warnaserror -nr:false -v:m
 - git clean -dxf tests
 - dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp3.1 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=net35 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=net48 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=netstandard1.6 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=netstandard2.0 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=netstandard2.1 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=netcoreapp1.0 -p:DisableImplicitNuGetFallbackFolder=true -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=netcoreapp1.1 -p:DisableImplicitNuGetFallbackFolder=true -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=netcoreapp2.0 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=netcoreapp2.1 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=netcoreapp3.0 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/SingleTFMPackageDownload -p:TestFramework=netcoreapp3.1 -warnaserror -nr:false -v:m
 artifacts:
 - path: 'TunnelVisionLabs.ReferenceAssemblyAnnotator\**\*.nupkg'
