--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,9 @@ test_script:
 - git clean -dxf tests
 - msbuild /restore tests/RefVersion3.1.0 /warnaserror /nr:false /v:m
 - git clean -dxf tests
+# No /warnaserror because WarningsNotAsErrors is not respected
+- msbuild /restore tests/NoDisabledWarnings /nr:false /v:m
+- git clean -dxf tests
 - msbuild /restore tests/SingleTFM /p:TestFramework=net35 /warnaserror /nr:false /v:m
 - git clean -dxf tests
 - msbuild /restore tests/SingleTFM /p:TestFramework=net48 /warnaserror /nr:false /v:m
@@ -43,6 +46,8 @@ test_script:
 - dotnet msbuild -restore tests/MultiTFM -warnaserror -nr:false -v:m
 - git clean -dxf tests
 - dotnet msbuild -restore tests/RefVersion3.1.0 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/NoDisabledWarnings -warnaserror -nr:false -v:m
 - git clean -dxf tests
 - dotnet msbuild -restore tests/SingleTFM -p:TestFramework=net35 -warnaserror -nr:false -v:m
 - git clean -dxf tests
