--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ test_script:
 - msbuild /restore tests/RefVersion3.1.0 /warnaserror /nr:false /v:m
 - git clean -dxf tests
 # No /warnaserror because WarningsNotAsErrors is not respected
-- msbuild /restore tests/NoDisabledWarnings /nr:false /v:m
+- msbuild /restore tests/NoDisabledWarnings /p:TreatWarningsAsErrors=true /nr:false /v:m
 - git clean -dxf tests
 - msbuild /restore tests/SingleTFM /p:TestFramework=net35 /warnaserror /nr:false /v:m
 - git clean -dxf tests
