Failing tests for using nullability attributes in WPF codebehind

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,6 +41,8 @@ test_script:
 - msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp3.0 /warnaserror /nr:false /v:m
 - git clean -dxf tests
 - msbuild /restore tests/SingleTFM /p:TestFramework=netcoreapp3.1 /warnaserror /nr:false /v:m
+- git clean -dxf tests
+- msbuild /restore tests/WPF /warnaserror /nr:false /v:m
 
 - git clean -dxf tests
 - dotnet msbuild -restore tests/MultiTFM -warnaserror -nr:false -v:m
@@ -70,5 +72,7 @@ test_script:
 - dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp3.0 -warnaserror -nr:false -v:m
 - git clean -dxf tests
 - dotnet msbuild -restore tests/SingleTFM -p:TestFramework=netcoreapp3.1 -warnaserror -nr:false -v:m
+- git clean -dxf tests
+- dotnet msbuild -restore tests/WPF -warnaserror -nr:false -v:m
 artifacts:
 - path: 'TunnelVisionLabs.ReferenceAssemblyAnnotator\**\*.nupkg'
